<resources>
    <string name="app_name">EScreening</string>
    <string name="title_activity_start_screening">StartScreeningActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="string_dashboard">Dashboard</string>
    <string name="string_mobile_student">Mobile Student</string>
    <string name="string_c_v">C.V</string>
    <string name="string_personal_statement">Personal Statement</string>
    <string name="string_ielts">IELTS</string>
    <string name="string_birth_certificate">Birth Certificate</string>
    <string name="string_valid_id">Valid ID</string>
    <string name="string_testmonial">Testmonial</string>
    <string name="string_results">Results</string>
    <string name="string_transcripts">Transcripts</string>
    <string name="string_student_screening">Student Screening</string>
    <string name="string_documents_upload">Documents upload</string>
    <string name="string_passport">Passport</string>
    <string name="menu_passport">Passport</string>
    <string name="menu_transcripts">Transcripts</string>
    <string name="menu_results">Results</string>
    <string name="menu_testimonial">Testimonial</string>
    <string name="menu_valid_ID">Valid ID</string>
    <string name="menu_Birth_Certificate">Birth Certificate</string>
    <string name="menu_IELTS">IELTS</string>
    <string name="menu_Personal_Statement">Personal Statement</string>
    <string name="menu_CV">C.V</string>
    <string name="title_activity_start_screening2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="string_upload_passport">Upload a pdf format of your passport photograph. Filename must start with the phone number used during registration.\ne.g 0123456789Passport</string>
    <string name="string_upload_birth_certificate">Upload a pdf format of your Birth Certificate. Filename must start with the phone number used during registration. \ne.g 0123456789BirthCertificate</string>
    <string name="string_upload_cv">Upload a pdf format of your C.V. Filename must start with the phone number used during registration. \ne.g 0123456789CV</string>
    <string name="string_upload_ielts">Upload a pdf format of your IELTS. Filename must start with the phone number used during registration. \ne.g 0123456789IELTS</string>
    <string name="string_upload_personal_statement">Upload a pdf format of your Personal Statement. Filename must start with the phone number used during registration. \ne.g 0123456789PersonalStatement</string>
    <string name="string_upload_results">Upload a pdf format of your O\'Level Result. Filename must start with the phone number used during registration. e.g 0123456789Result</string>
    <string name="string_upload_testimonial">Upload a pdf format of your O\'Level Testimonial. Filename must start with the phone number used during registration. e.g 0123456789Testimonial</string>
    <string name="string_upload_transcripts">Upload a pdf format of your educational transcripts. Filename must start with the phone number used during registration. e.g 0123456789Transcripts</string>
    <string name="string_upload_valid_id">Upload a pdf format of your valid ID e.g International Passport. Filename must start with the phone number used during registration. e.g 0123456789ValidID</string>
</resources>
